# ik_llama.cpp

./: README.md  SDF_SPARSE_DELTA.md  convert_dflash_to_gguf.py  convert_hf_to_gguf.py  probabilities.txt  prompts.jsonl
common/: chat-parser.cpp  chat.cpp  chat.h  common.cpp  common.h  speculative.cpp
examples/: CMakeLists.txt
examples/blurry-sharp/: CMakeLists.txt  README.md  blurry-sharp.cpp  prepare_models.py
examples/bs-deltacalc/: CMakeLists.txt  README.md  bs-deltacalc.cpp  test-ray-march.cpp
examples/bs-loracalc/: CMakeLists.txt  bs-loracalc.cpp
examples/perplexity/: perplexity.cpp
examples/server/: server-context.cpp  server-context.h  server.cpp
experiments/: WEIGHT_CONDENSATION.md  condense_experts.py  pim_cpu_expert.py  weight_condenser.py
ggml/include/: ggml-backend.h  ggml-cuda.h  ggml-expert-bitmask.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-backend.cpp  ggml-common.h  ggml-cuda.cu  ggml-pim-cache.c  ggml-pim-cache.h  ggml-quants.c  ggml-quants.h  ggml.c  (+2 more)
include/: llama.h
routing_training/: prompts.jsonl
scripts/: collect_routing_data.sh  prepare_routing_dataset.py  train_routing_predictor.py  train_routing_predictor_hidden.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-blurry-sharp.cpp  llama-blurry-sharp.h  llama-build-context.cpp  llama-build-context.h  llama-context.h  llama-cparams.h  llama-gate-probe.cpp  llama-hparams.cpp  llama-hparams.h  llama-load-tensors.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama-streaming.cpp  llama-streaming.h  llama-vocab.cpp  llama.cpp
(+52 files in other folders)
